plugins {
    id 'java'
    // 允许指定 mainClassName 入口
    id 'application'
}

mainClassName = 'com.huanhe_tech.siever.Main'

sourceCompatibility = 11
targetCompatibility = 11

dependencies {
    // 需要指定项目以来，否则 gradle 找不到其他模块
    implementation project(":siever-utils")
    implementation project(':siever-cli')
    implementation fileTree(dir: 'libs', includes: ['*.jar'])
}

allprojects {

    group 'com.huanhe-tech'
    version '1.0'

    apply plugin: 'java'
    sourceCompatibility = 11

    java {
        modularity.inferModulePath = true
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

        implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'

        implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
        implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
        implementation group: 'org.apache.commons', name: 'commons-configuration2', version: '2.7'

        implementation group: 'com.alibaba', name: 'druid', version: '1.2.5'

        implementation group: 'org.jetbrains', name: 'annotations', version: '20.1.0'

        implementation group: 'commons-dbutils', name: 'commons-dbutils', version: '1.7'

        implementation group: 'us.codecraft', name: 'webmagic-core', version: '0.7.4'

        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

        implementation 'javax.servlet:javax.servlet-api:4.0.1'
        implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
        implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'


    }

    test {
        useJUnitPlatform()
        jvmArgs '--enable-preview'
    }

    compileJava {
        doFirst {
            options.compilerArgs = ['--module-path', classpath.asPath]
            classpath = files()
        }
        options.encoding = "UTF-8"
    }

}


subprojects {
    dependencies {
        implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
        implementation fileTree(dir: '../libs', includes: ['*.jar'])
    }
}
